[project]
name = "test-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tadaharu ishibe", email = "t.iguchi919@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test_project"]
